# kick

./: .gitignore  Makefile.am  Makefile.in  configure  configure.ac  deploy.sh
autom4te.cache/: output.0  output.2  traces.0  traces.1  traces.2
kick/: KickDef.hh  MDService.hh  Makefile.am  Makefile.in
service/: KickLog.hh  MDOptions.cc  MDOptions.hh  MDServiceImpl.cc  MDServiceImpl.hh  Makefile.am  Makefile.in  Message.cc  Message.hh
utest/: MDServiceTest.cc  Makefile.am  Makefile.in  env.sh  log.cfg  md.cfg
